add restart btn & readme, start num_attempts at 1 instead of 0, clean up commentary

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,8 @@
     <button type="submit">Submit</button>
 </form>
 
+<button id="restart-btn">Play Again</button>
+
 <p id="msg"></p>
 
 <div id="word_display"><p><b>Words Found:</b></p></div>
